--- a/index.html
+++ b/index.html
@@ -4,77 +4,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Profile</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1, h2 {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f2f5;
             color: #333;
+            line-height: 1.6;
         }
+        /* Header Styling */
+        .header {
+            background: linear-gradient(135deg, #007bff, #00d4ff);
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+            border-radius: 0 0 20px 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+        .header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+        .header p {
+            font-size: 1.2rem;
+            opacity: 0.9;
+        }
+        /* Profile Image */
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 5px solid white;
+            margin-top: -75px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        /* Section Styling */
+        .section {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease;
+        }
+        .section:hover {
+            transform: translateY(-5px);
+        }
+        .section h2 {
+            color: #007bff;
+            font-weight: 600;
+            border-bottom: 2px solid #007bff;
+            display: inline-block;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        /* Links */
         a {
-            color: #0066cc;
+            color: #007bff;
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
+            color: #0056b3;
+        }
+        /* Buttons */
+        .btn-custom {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 25px;
+            transition: background-color 0.3s ease;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+            color: white;
+        }
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            .header h1 {
+                font-size: 2rem;
+            }
+            .profile-img {
+                width: 120px;
+                height: 120px;
+                margin-top: -60px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <!-- Header -->
+    <div class="header">
         <h1>Your Name</h1>
-        <p><em>Your Tagline or Intro (e.g., Software Engineer | Researcher | Data Scientist)</em></p>
-        
-        <h2>About Me</h2>
-        <p>
-            Write a brief introduction about yourself. For example: "I am a passionate [your profession] with [X years] of experience in [your field]. I specialize in [your skills or interests]."
-        </p>
-
-        <h2>Career Details</h2>
-        <ul>
-            <li><strong>Job Title</strong> - Company Name (Start Date - End Date)
-                <ul>
-                    <li>Key responsibility or achievement.</li>
-                    <li>Another notable contribution.</li>
-                </ul>
-            </li>
-            <li><strong>Job Title</strong> - Company Name (Start Date - End Date)
-                <ul>
-                    <li>Key responsibility or achievement.</li>
-                </ul>
-            </li>
-        </ul>
-
-        <h2>Rewards & Achievements</h2>
-        <ul>
-            <li>Award Name - Organization (Year)</li>
-            <li>Achievement Name - Description (Year)</li>
-        </ul>
-
-        <h2>Published Papers</h2>
-        <ul>
-            <li><a href="link-to-paper">Paper Title</a> - Journal/Conference Name (Year)</li>
-            <li><a href="link-to-paper">Paper Title</a> - Journal/Conference Name (Year)</li>
-        </ul>
-
-        <h2>Contact</h2>
-        <p>
-            Email: <a href="mailto:your.email@example.com">your.email@example.com</a><br>
-            LinkedIn: <a href="https://linkedin.com/in/your-profile">linkedin.com/in/your-profile</a><br>
-            GitHub: <a href="https://github.com/your-username">github.com/your-username</a>
-        </p>
+        <p>Your Tagline (e.g., Software Engineer | AI Researcher | Data Enthusiast)</p>
     </div>
-</body>
-</html>
+
+    <!-- Main Container -->
+    <div class="container mt-4">
+        <!-- Profile Image (Optional) -->
+        <div class="text-center">
+            <img src="profile.jpg" alt="Your Name" class="profile-img">
+        </div>
+
+        <!-- About Me -->
+        <div class="section">
+            <h2>About Me</h2>
+            <p>
+                Write a brief introduction. For example: "I am a passionate [your profession] with [X years] of experience in [your field]. I specialize in [your skills or interests], and I love building innovative solutions."
+            </p>
+        </div>
+
+        <!-- Career Details -->
+        <div class="section">
+            <h2>Career Details</h2>
+            <ul class="list-unstyled">
+                <li>
+                    <strong>Job Title</strong> - Company Name (Start Date - End Date)<br>
+                    <small>Key responsibility or achievement.</small><br>
+                    <small>Another notable contribution.</small>
+                </li>
+                <li class="mt-3">
+                    <strong>Job Title</strong> - Company Name (Start Date - End Date)<br>
+                    <small>Key responsibility or achievement.</small>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Rewards & Achievements -->
+        <div class="section">
+            <h2>Rewards & Achievements</h2>
+            <ul>
+                <li>Award Name - Organization (Year)</li>
+                <li>Achievement Name - Description (Year)</li>
+            </ul>
+        </div>
